--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Site</title>
 </head>
 <body>
-    Hi, I'm Vijayadass
+    Hi, I'm Vijayadass Mohan
 
     I work at frontend Developer
 </body>
