update the project details

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Site</title>
 </head>
 <body>
-    Hi, I'm Vijayadass Mohan
+    Hi, I'm Vijayadass Mohan.
 
-    I work at frontend Developer
+    I work at IT!
+
+    I have worked on few CLI apps.
 </body>
 </html>
