--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     Hi, I'm Vijayadass Mohan
 
-    I work at frontend Developer
+    I work at frontend Developer.
+
+    In my favourite movie is Kaththi.
 </body>
 </html>
