One more add the movie

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     I work at frontend Developer.
 
-    In my favourite movie is Kaththi.
+    In my favourite movie is Kaththi, Master.
 </body>
 </html>
